# fastapi-simple-project

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/api/: books.py
src/domain/: book.py
src/fastapi_simple_project/: main.py
src/fastapi_simple_project/api/: books.py
src/fastapi_simple_project/services/: book_service.py
src/services/: book_service.py
